now builds a JSON obj which contains the name of the chat the name of the chat is the concatenated string of all members in the chat this is a terrible way to name a chat, but oh well, Valhalla!

--- a/app/src/main/res/layout/fragment_landing.xml
+++ b/app/src/main/res/layout/fragment_landing.xml
@@ -25,11 +25,11 @@
         android:layout_height="443dp"
         android:layout_marginBottom="8dp"
         android:footerDividersEnabled="true"
-        app:layout_constraintBottom_toTopOf="@+id/createNewChatButton"
+        app:layout_constraintBottom_toTopOf="@+id/createNewChatFragNewChatButton"
         tools:layout_editor_absoluteX="0dp" />
 
     <ImageButton
-        android:id="@+id/createNewChatButton"
+        android:id="@+id/createNewChatFragNewChatButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
