--- a/app/src/main/res/layout/fragment_create_chat.xml
+++ b/app/src/main/res/layout/fragment_create_chat.xml
@@ -35,7 +35,7 @@
         app:layout_constraintVertical_bias="0.498" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/createNewChatFragNewChatButton"
         android:layout_width="76dp"
         android:layout_height="74dp"
         android:layout_marginBottom="8dp"
