Now able accept and deny request as well as delete contacts

--- a/app/src/main/res/layout/fragment_friend_profile.xml
+++ b/app/src/main/res/layout/fragment_friend_profile.xml
@@ -46,4 +46,26 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fname_textView" />
 
+    <Button
+        android:id="@+id/friend_accept_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:text="@string/friend_accept_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lname_textView" />
+
+    <Button
+        android:id="@+id/friend_deny_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/friend_deny_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/friend_accept_button" />
+
 </android.support.constraint.ConstraintLayout>
