--- a/app/src/main/res/values-v21/keys.xml
+++ b/app/src/main/res/values-v21/keys.xml
@@ -16,6 +16,7 @@
     <string name="keys_fragment_landing">landingFragmentTag</string>
     <string name="keys_fragment_chat">chatFragmentTag</string>
     <string name="keys_fragment_chat_list">chatListFragmentTag</string>
+    <string name="keys_fragment_create_new_chat">createChatFragmentTag</string>
     <string name="keys_fragment_profile">profileFragmentTag</string>
     <string name="keys_fragment_contacts">contactsFragmentTag</string>
     <string name="keys_fragment_settings">settingsFragmentTag</string>
