laod frag not working for some reason, not even reaching log statement inside it. activity drawer now has a button to create a new chat also

--- a/app/src/main/res/menu/activity_chat_drawer.xml
+++ b/app/src/main/res/menu/activity_chat_drawer.xml
@@ -20,6 +20,10 @@
         android:icon="@drawable/ic_menu_settings"
         android:title="Settings" />
     <item
+        android:id="@+id/nav_new_chat"
+        android:icon="@drawable/ic_menu_settings"
+        android:title="New Chat" />s
+    <item
         android:id="@+id/nav_logout"
         android:title="Logout" />
 
