--- a/app/src/main/res/layout/fragment_create_chat.xml
+++ b/app/src/main/res/layout/fragment_create_chat.xml
@@ -22,7 +22,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
-        android:id="@+id/try_progress_bar"
+        android:id="@+id/create_chat_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
