--- a/app/src/main/res/menu/activity_chat_drawer.xml
+++ b/app/src/main/res/menu/activity_chat_drawer.xml
@@ -22,7 +22,7 @@
     <item
         android:id="@+id/nav_new_chat"
         android:icon="@drawable/ic_menu_settings"
-        android:title="New Chat" />s
+        android:title="New Chat" />
     <item
         android:id="@+id/nav_logout"
         android:title="Logout" />
