now also building Uri with new ep for adding all members of a new chat with one ep call instead of a call for each member.

--- a/app/src/main/res/values-v21/end_points.xml
+++ b/app/src/main/res/values-v21/end_points.xml
@@ -34,6 +34,7 @@
     <string name="ep_get_recent_chat">getRecentChat</string>
     <string name="ep_chat">chat</string>
     <string name="ep_new_chat">newChat</string>
+    <string name="ep_new_chat_add_all_members">addNewChatMembers</string>
 
 
     </resources>
