ok, localhost on AS was being weird with Uri objects, I'm going back to heroku,guess I will need ot merge into master for that.

--- a/app/src/main/res/values-v21/end_points.xml
+++ b/app/src/main/res/values-v21/end_points.xml
@@ -10,7 +10,8 @@
 
 
 
-    <string name="ep_base_url">rabbitchat-backend.herokuapp.com</string>
+   <!-- <string name="ep_base_url">rabbitchat-backend.herokuapp.com</string> SWITCH BACK AFTER TESTING! -->
+    <string name="ep_base_url">localhost:5000</string>
     <string name="ep_login">login</string>
     <string name="ep_email">email</string>
     <string name="ep_register">register</string>
