added a nav button to go to home or landing frag, adding new chat buttons and listeners on frags.

--- a/app/src/main/res/menu/activity_chat_drawer.xml
+++ b/app/src/main/res/menu/activity_chat_drawer.xml
@@ -4,6 +4,10 @@
     tools:showIn="navigation_view">
 
     <item
+        android:id="@+id/nav_go_home"
+        android:icon="@drawable/ic_menu_settings"
+        android:title="Home" />
+    <item
         android:id="@+id/nav_chat"
         android:icon="@drawable/ic_menu_chat"
         android:title="Chats" />
