--- a/app/src/main/res/layout/fragment_create_chat.xml
+++ b/app/src/main/res/layout/fragment_create_chat.xml
@@ -49,15 +49,17 @@
 
     <TextView
         android:id="@+id/createChatUsernamesDisplay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="76dp"
-        android:text="TextView"
+        android:layout_width="245dp"
+        android:layout_height="64dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/create_new_chat_add_users_textview_default"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/create_chat_recycle_view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
