--- a/app/src/main/res/values-v21/keys.xml
+++ b/app/src/main/res/values-v21/keys.xml
@@ -8,6 +8,7 @@
     <string name="keys_prefs_username">username</string>
     <string name="keys_prefs_stay_logged_in">loggedIn</string>
     <string name="keys_prefs_time_stamp">ts key</string>
+    <string name="keys_prefs_my_memberid">mymemberid</string>
 
     <string name="keys_bundle_vcode">vCode</string>
 
