--- a/app/src/main/res/values-v21/keys.xml
+++ b/app/src/main/res/values-v21/keys.xml
@@ -9,6 +9,8 @@
     <string name="keys_prefs_stay_logged_in">loggedIn</string>
     <string name="keys_prefs_time_stamp">ts key</string>
     <string name="keys_prefs_my_memberid">mymemberid</string>
+    <string name="keys_prefs_chatids_set">chatidsset</string>
+    <string name="keys_prefs_chat_names_set">chatnamesset</string>
 
     <string name="keys_bundle_vcode">vCode</string>
 
