--- a/app/src/main/res/values-v21/keys.xml
+++ b/app/src/main/res/values-v21/keys.xml
@@ -32,6 +32,8 @@
     <string name="keys_json_chat_id">chatid</string>
     <string name="keys_json_success_value_true">true</string>
     <string name="keys_json_success_value_false">false</string>
-    <string name="keys_json_search_result">data</string>
+    <string name="keys_json_firstname">firstname</string>
+    <string name="keys_json_lastname">lastname</string>
+    <string name="keys_json_search_result">search_result</string>
 
 </resources>
