--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -38,9 +38,10 @@
 
     <Button
         android:id="@+id/setting_button_theme_1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="124dp"
-        android:layout_marginStart="124dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimary"
         android:text="@string/setting_button_theme_1"
@@ -50,9 +51,10 @@
 
     <Button
         android:id="@+id/setting_button_theme_2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="124dp"
-        android:layout_marginStart="124dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimary2"
         android:text="@string/setting_button_theme_2"
@@ -62,9 +64,10 @@
 
     <Button
         android:id="@+id/setting_button_theme_3"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="124dp"
-        android:layout_marginStart="124dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimary3"
         android:text="@string/setting_button_theme_3"
@@ -74,9 +77,10 @@
 
     <Button
         android:id="@+id/setting_button_theme_4"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="124dp"
-        android:layout_marginStart="124dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimary4"
         android:text="@string/setting_button_theme_4"
