--- a/app/src/main/res/menu/activity_chat_drawer.xml
+++ b/app/src/main/res/menu/activity_chat_drawer.xml
@@ -2,12 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
-
-
     <item
         android:id="@+id/nav_home"
         android:icon="@mipmap/baseline_home_black_18dp"
         android:title="Home" />
+
     <item
         android:id="@+id/nav_chat"
         android:icon="@drawable/ic_menu_chat"
@@ -21,9 +20,17 @@
         android:icon="@drawable/ic_menu_profile"
         android:title="Profile" />
     <item
+        android:id="@+id/nav_search"
+        android:icon="@drawable/ic_menu_profile"
+        android:title="Search" />
+    <item
         android:id="@+id/nav_settings"
         android:icon="@drawable/ic_menu_settings"
         android:title="Settings" />
+    <item
+        android:id="@+id/nav_new_chat"
+        android:icon="@drawable/ic_menu_settings"
+        android:title="New Chat" />
     <item
         android:id="@+id/nav_logout"
         android:title="Logout" />
