--- a/app/src/main/res/values-v21/keys.xml
+++ b/app/src/main/res/values-v21/keys.xml
@@ -8,6 +8,9 @@
     <string name="keys_prefs_username">username</string>
     <string name="keys_prefs_stay_logged_in">loggedIn</string>
     <string name="keys_prefs_time_stamp">ts key</string>
+    <string name="keys_prefs_my_memberid">mymemberid</string>
+    <string name="keys_prefs_chatids_set">chatidsset</string>
+    <string name="keys_prefs_chat_names_set">chatnamesset</string>
 
     <string name="keys_bundle_vcode">vCode</string>
 
@@ -17,9 +20,12 @@
     <string name="keys_fragment_chat">chatFragmentTag</string>
     <string name="keys_fragment_condition">DisplayConditionsFragmentTag</string>
     <string name="keys_fragment_chat_list">chatListFragmentTag</string>
+    <string name="keys_fragment_create_new_chat">createChatFragmentTag</string>
     <string name="keys_fragment_profile">profileFragmentTag</string>
     <string name="keys_fragment_contacts">contactsFragmentTag</string>
+    <string name="keys_fragment_search">searchFragmentTag</string>
     <string name="keys_fragment_settings">settingsFragmentTag</string>
+    <string name="keys_fragment_contact_details">contactDetailsFragmentTag</string>
 
     <string name="keys_json_username">username</string>
     <string name="keys_json_password">password</string>
@@ -32,5 +38,8 @@
     <string name="keys_json_chat_id">chatid</string>
     <string name="keys_json_success_value_true">true</string>
     <string name="keys_json_success_value_false">false</string>
+    <string name="keys_json_firstname">firstname</string>
+    <string name="keys_json_lastname">lastname</string>
+    <string name="keys_json_search_result">search_result</string>
 
 </resources>
