About to pull from master.  Then I am trying to implement password reset.

--- a/app/src/main/res/values-v21/end_points.xml
+++ b/app/src/main/res/values-v21/end_points.xml
@@ -28,6 +28,7 @@
     <string name="ep_contacts_find_new">contacts/find</string>
     <string name="ep_contacts_verified">verified</string>
     <string name="ep_contacts_add">createContact</string>
+    <string name="ep_contacts_getAllContacts">getAllContacts</string>
 
     //Messages
     <string name="ep_send_message">sendMessages</string>
