--- a/app/src/main/res/values-v21/end_points.xml
+++ b/app/src/main/res/values-v21/end_points.xml
@@ -14,6 +14,7 @@
     <!-- <string name="ep_base_url">localhost:5000</string> -->
     <string name="ep_login">login</string>
     <string name="ep_email">email</string>
+    <string name="ep_changePassword">changePassword</string>
     <string name="ep_register">register</string>
     <string name="ep_register_saveVerificationCode">saveVerificationCode</string>
     <string name="ep_base_localhost_5000">localhost:5000</string>
