can add and delete locations

--- a/app/src/main/res/layout/fragment_display_conditions.xml
+++ b/app/src/main/res/layout/fragment_display_conditions.xml
@@ -31,7 +31,6 @@
         android:layout_marginTop="16dp"
         android:text="TextView"
         android:textAlignment="center"
-        android:textSize="36sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,7 +44,6 @@
         android:layout_marginTop="16dp"
         android:text="TextView"
         android:textAlignment="center"
-        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.511"
@@ -61,44 +59,9 @@
         android:layout_marginTop="32dp"
         android:text="Temperature"
         android:textAlignment="center"
-        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/WeatherText_textView" />
-
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView13">
-
-        <TextView
-            android:id="@+id/Celcius"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Celcius"
-            android:textAlignment="center"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:layout_editor_absoluteX="214dp"
-            tools:layout_editor_absoluteY="233dp" />
-
-        <TextView
-            android:id="@+id/celcius_textView"
-            android:layout_width="75dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="99"
-            android:textAlignment="center"
-            android:textSize="18sp" />
-    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout3"
@@ -106,11 +69,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+        app:layout_constraintTop_toBottomOf="@+id/textView13">
 
         <TextView
             android:id="@+id/Ferinheight"
@@ -119,19 +82,44 @@
             android:layout_weight="1"
             android:text="Ferinheight"
             android:textAlignment="center"
-            android:textSize="18sp"
             android:textStyle="bold"
             tools:layout_editor_absoluteX="214dp"
             tools:layout_editor_absoluteY="233dp" />
 
         <TextView
             android:id="@+id/fahrenheit_textView"
-            android:layout_width="75dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="99"
             android:textAlignment="center"
-            android:textSize="18sp" />
+            />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/add_loc_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="Add Location"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/display_progressbar" />
+
+    <Button
+        android:id="@+id/delete_loc_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:text="Delete Location"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/display_progressbar" />
 
 </android.support.constraint.ConstraintLayout>
