--- a/app/src/main/res/layout/fragment_display_conditions.xml
+++ b/app/src/main/res/layout/fragment_display_conditions.xml
@@ -122,4 +122,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/display_progressbar" />
 
+    <!--<fragment-->
+        <!--android:id="@+id/map_fragment"-->
+        <!--android:name="com.google.android.gms.maps.SupportMapFragment"-->
+        <!--android:layout_width="262dp"-->
+        <!--android:layout_height="207dp"-->
+        <!--android:layout_marginBottom="8dp"-->
+        <!--android:layout_marginEnd="8dp"-->
+        <!--android:layout_marginStart="8dp"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--app:layout_constraintBottom_toBottomOf="parent"-->
+        <!--app:layout_constraintEnd_toEndOf="parent"-->
+        <!--app:layout_constraintStart_toStartOf="parent"-->
+        <!--app:layout_constraintTop_toBottomOf="@+id/linearLayout3"-->
+        <!--app:layout_constraintVertical_bias="0.475"-->
+        <!--xmlns:android="http://schemas.android.com/apk/res/android"/>-->
+
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/map_fragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+
+
 </android.support.constraint.ConstraintLayout>
