--- a/app/src/main/res/layout/messaging_list_rows.xml
+++ b/app/src/main/res/layout/messaging_list_rows.xml
@@ -9,35 +9,30 @@
     cardview:cardElevation="3dp"
     cardview:cardUseCompatPadding="true">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp">
-
-        <!--
-        android:src="@drawable/placeholder"/>
-        -->
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/username"
-            android:layout_width="82dp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:textAlignment="center"
-            android:textSize="18sp" />
+            android:textAlignment="center" />
 
         <TextView
             android:id="@+id/message"
-            android:layout_width="274sp"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:maxLines="3"
+            android:maxLines="10"
             android:padding="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="#444"
-            android:textSize="18sp"
             android:textStyle="bold" />
+    </LinearLayout>
 
-    </RelativeLayout>
 </android.support.v7.widget.CardView>
