--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -15,11 +15,18 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/space" />
+        app:layout_constraintTop_toBottomOf="@+id/space"
+
+
+
+        />
+
+
 
     <ProgressBar
         android:id="@+id/try_progress_bar"
@@ -51,9 +58,10 @@
         <RadioButton
             android:id="@+id/friends_radioButton"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorPrimary3"
+            android:background="@color/colorPrimary"
+            android:buttonTint="@android:color/background_dark"
             android:checked="true"
             android:text="@string/contacts_frag_toggle_button_friends" />
 
@@ -65,9 +73,10 @@
         <RadioButton
             android:id="@+id/pending_radioButton"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorPrimary3"
+            android:background="@color/colorPrimary"
+            android:buttonTint="@android:color/background_dark"
             android:text="@string/contacts_frag_toggle_button_pending" />
 
         <Space
@@ -78,9 +87,10 @@
         <RadioButton
             android:id="@+id/sent_radioButton"
             android:layout_width="wrap_content"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@color/colorPrimary3"
+            android:background="@color/colorPrimary"
+            android:buttonTint="@android:color/background_dark"
             android:text="@string/contacts_frag_toggle_button_sent" />
     </RadioGroup>
 
