--- a/app/src/main/res/values-v21/keys.xml
+++ b/app/src/main/res/values-v21/keys.xml
@@ -11,6 +11,8 @@
     <string name="keys_prefs_my_memberid">mymemberid</string>
     <string name="keys_prefs_chatids_set">chatidsset</string>
     <string name="keys_prefs_chat_names_set">chatnamesset</string>
+    <string name="keys_prefs_theme">theme</string>
+    <string name="keys_prefs_text_size">textsize</string>
 
     <string name="keys_bundle_vcode">vCode</string>
 
