--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <!-- Other Colors for App Theme -->
     <color name="colorPrimary2">#2196f3</color>
     <color name="colorPrimaryDark2">#1976d2</color>
-    <color name="colorAccent2">#ff5722</color>
+    <color name="colorAccent2">#C8E6C9</color>
 
     <color name="colorPrimary3">#9c27b0</color>
     <color name="colorPrimaryDark3">#7b1fa2</color>
@@ -15,7 +15,9 @@
 
     <color name="colorPrimary4">#4caf50</color>
     <color name="colorPrimaryDark4">#388e3c</color>
-    <color name="colorAccent4">#ffeb3b</color>
+    <color name="colorAccent4">#000080</color>
+
+    <color name="white">#ffffff</color>
 
     <color name="border">#000000</color>
     <color name="fill">#CCCCCC</color>
