--- a/app/src/main/res/values-v21/keys.xml
+++ b/app/src/main/res/values-v21/keys.xml
@@ -20,6 +20,7 @@
     <string name="keys_fragment_register">registerFragmentTag</string>
     <string name="keys_fragment_landing">landingFragmentTag</string>
     <string name="keys_fragment_chat">chatFragmentTag</string>
+    <string name="keys_fragment_password">changePasswordFragmentTag</string>
     <string name="keys_fragment_condition">DisplayConditionsFragmentTag</string>
     <string name="keys_fragment_chat_list">chatListFragmentTag</string>
     <string name="keys_fragment_create_new_chat">createChatFragmentTag</string>
